@@ -26,9 +26,7 @@ import org.apache.logging.log4j.Logger;
 
 import java.io.IOException;
 import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.URLEncoder;
+import java.net.*;
 import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
 import java.util.Locale;
@@ -118,9 +116,9 @@ public class GoogleAnalytics {
 
 			processRequestURL(getGATrackURL(payload));
 
-			LOG.info("Tracked page: " + page);
+			LOG.info("Tracked page: {}", page);
 		} catch (Exception e) {
-			LOG.warn("Failed to track page: " + page, e);
+			LOG.warn("Failed to track page: {}", page, e);
 		}
 	}
 
@@ -132,9 +130,9 @@ public class GoogleAnalytics {
 			payload.put("ep.ctx", context);
 			processRequestURL(getGATrackURL(payload));
 
-			LOG.info("Tracked event: " + name + ", context: " + context);
+			LOG.info("Tracked event: {}, context: {}", name, context);
 		} catch (Exception e) {
-			LOG.warn("Failed to track event: " + name + ", context: " + context, e);
+			LOG.warn("Failed to track event: {}, context: {}", name, context, e);
 		}
 	}
 
@@ -146,9 +144,9 @@ public class GoogleAnalytics {
 		requestExecutor.submit(() -> trackEventSync(name, context));
 	}
 
-	private void processRequestURL(String requesturl) throws IOException {
+	private void processRequestURL(String requesturl) throws IOException, URISyntaxException {
 		if (MCreatorApplication.isInternet && ANALYTICS_ENABLED && !Launcher.version.isDevelopment()) {
-			HttpURLConnection conn = (HttpURLConnection) new URL(requesturl).openConnection();
+			HttpURLConnection conn = (HttpURLConnection) new URI(requesturl).toURL().openConnection();
 			conn.setInstanceFollowRedirects(true);
 			conn.setUseCaches(false);
 			conn.setDefaultUseCaches(false);
