@@ -24,6 +24,8 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 
@@ -143,11 +145,7 @@ public class Plugin implements Comparable<Plugin> {
 	}
 
 	public URL toURL() throws MalformedURLException {
-		if (file.isDirectory()) {
-			return (file.toURI().toURL());
-		} else {
-			return (new URL("jar:file:" + file.getAbsolutePath() + "!/"));
-		}
+		return file.toURI().toURL();
 	}
 
 	@Nullable public String getLoadFailure() {
